Add QTDECLARATIVE_VERSION macro for qtdeclarative
Provide version info for each library.

Task-number: QTMODULARIZATION-44
Reviewed-by: axis

--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,8 @@ translations/*.qm
 translations/*_untranslated.ts
 qrc_*.cpp
 
+src/declarative/qtdeclarativeversion.h
+
 # Test generated files
 QObject.log
 tst_*
