--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,9 @@ tests/auto/qprocess/fileWriterProcess.txt
 .com.apple.timemachine.supported
 tests/auto/qlibrary/libmylib.so*
 tests/auto/qresourceengine/runtime_resource.rcc
+tools/qtestlib/chart/chart*
+tools/qtestlib/updater/updater*
+tools/qmltestrunner/qmltestrunner
 tools/activeqt/testcon/testcon.tlb
 translations/*.qm
 translations/*_untranslated.ts
@@ -259,3 +262,13 @@ src/xml/lib/
 *.dep
 *.map
 work
+
+#generated version headers
+src/qmltest/qtquicktestversion.h
+src/qtquick1/qtquick1version.h
+
+tests/auto/*/*.o
+tests/auto/*/*.moc
+tests/auto/*/*/*.o
+tests/auto/*/*/*.moc
+src/declarative/generated/
