Add some ignore rules to ignore list
Change-Id: I7953e503d5665aaccf87ca4fe8b1b4169bfae5c8
Reviewed-by: Aaron Kennedy <aaron.kennedy@nokia.com>

--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,8 @@ tst_*~
 *.idb
 *.ilk
 *.pdb
+*.dll
+*.exp
 *.sln
 *.suo
 *.vcproj
@@ -254,6 +256,8 @@ src/qmltest/qtquicktestversion.h
 src/qtquick1/qtquick1version.h
 src/qmldevtools/qtqmldevtoolsversion.h
 src/quick/qtquickversion.h
+src/compatibility/qtdeclarativeversion.h
+src/qml/qtqmlversion.h
 
 tests/auto/*/*.o
 tests/auto/*/*.moc
