Add qmake generated files to .gitignore.
Add source files generated by qmake for automatic static plugin
imports to .gitignore.

Change-Id: I4c5488bdc146f501963f5414017ba80d781210ef
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,6 @@ tests/auto/*/*.o
 tests/auto/*/*.moc
 tests/auto/*/*/*.o
 tests/auto/*/*/*.moc
+
+# Generated static plugin import sources
+*_plugin_import.cpp
