WebAssembly for QtDeclarative
This is the squashed diff from wip/webassembly to 5.12.

Done-with: Lorn Potter <lorn.potter@gmail.com>
Change-Id: Ieef34accefef38018a66d3c39bfacb825af4bea6
Reviewed-by: Lorn Potter <lorn.potter@gmail.com>

--- a/src/qml/configure.json
+++ b/src/qml/configure.json
@@ -32,10 +32,8 @@
             "section": "QML",
             "condition": [
                 "features.commandlineparser",
-                "features.localserver",
-                "features.process",
                 "features.qml-debug",
-                "features.qml-network",
+                "features.qml-network && features.localserver",
                 "features.xmlstreamwriter"
             ],
             "output": [ "privateFeature" ]
@@ -46,7 +44,7 @@
             "section": "QML",
             "condition": [
                 "features.commandlineparser",
-                "features.localserver",
+                "features.qml-network && features.localserver",
                 "features.process",
                 "features.qml-debug"
             ],
