--- a/src/quick/configure.json
+++ b/src/quick/configure.json
@@ -129,7 +129,7 @@
             "label": "Path support",
             "purpose": "Provides Path elements.",
             "section": "Qt Quick",
-            "condition": "features.quick-shadereffect",
+            "condition": "features.thread && features.quick-shadereffect",
             "output": [
                 "privateFeature"
             ]
