Add qml-worker-script feature
Depends on features.thread.

Change-Id: I65db68ac90c15af0ac0571ee021122f7ca2ca051
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>
Reviewed-by: Lorn Potter <lorn.potter@gmail.com>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>

--- a/src/qml/configure.json
+++ b/src/qml/configure.json
@@ -96,6 +96,13 @@
             "purpose": "Provides the DelegateModel QML type.",
             "section": "QML",
             "output": [ "privateFeature" ]
+        },
+        "qml-worker-script": {
+            "label": "QML WorkerScript",
+            "purpose": "Enables the use of threads in QML.",
+            "section": "QML",
+            "condition": "features.thread",
+            "output": [ "privateFeature" ]
         }
     },
 
