Add a configure test for std::make_unique
Seems like this is the only reliable way to determine whether we
have std::make_unique() or need to provide our own version.

Change-Id: I5b162e0a2d2448d7bc519958c6e85a075812135a
Fixes: QTBUG-71448
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/qml/configure.json
+++ b/src/qml/configure.json
@@ -12,7 +12,25 @@
         }
     },
 
+    "tests": {
+        "cxx14_make_unique": {
+            "label": "C++14 make_unique()",
+            "type": "compile",
+            "test": {
+                "include": "memory",
+                "main": [
+                    "std::unique_ptr<int> ptr = std::make_unique<int>();"
+                ]
+            }
+        }
+    },
+
     "features": {
+        "cxx14_make_unique": {
+            "label": "C++14 make_unique",
+            "condition": "tests.cxx14_make_unique",
+            "output": [ "privateFeature" ]
+        },
         "qml-network": {
             "label": "QML network support",
             "purpose": "Provides network transparency.",
