CMake: Don't handle empty resource files
[ChangeLog][Qml] Empty resource files will not be passed to Qt
Quick Compiler to be handled when using CMake.

Change-Id: I1513d29b70d8a4b08a2947f4a97fbd525c5ace8f
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/tests/auto/cmake/qtquickcompiler/CMakeLists.txt
+++ b/tests/auto/cmake/qtquickcompiler/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(Qt5QuickCompiler)
 
 set(CMAKE_CXXFLAGS "${CMAKE_CXXFLAGS} ${Qt5Core_EXECUTABLE_COMPILE_FLAGS}")
 
-qtquick_compiler_add_resources(RESOURCES "resources with space/qqc_test.qrc")
+qtquick_compiler_add_resources(RESOURCES "empty.qrc" "resources with space/qqc_test.qrc")
 
 set(CMAKE_AUTOMOC ON)
 
