Move model types into their own library
The model types are not part of the core QML runtime and should only be
loaded if you explicitly import them. We cannot enforce that in Qt5 as
some of them are available from the QtQml import, but we can change it
in Qt6.

Change-Id: I1e49e84d748e352537ec2d4af901c034c91d038f
Reviewed-by: Erik Verbruggen <erik.verbruggen@me.com>

--- a/src/qml/configure.json
+++ b/src/qml/configure.json
@@ -149,12 +149,6 @@
             "section": "QML",
             "output": [ "privateFeature" ]
         },
-        "qml-list-model": {
-            "label": "QML list model",
-            "purpose": "Provides the ListModel QML type.",
-            "section": "QML",
-            "output": [ "privateFeature" ]
-        },
         "qml-xml-http-request": {
             "label": "QML XML http request",
             "purpose": "Provides support for sending XML http requests.",
@@ -178,12 +172,6 @@
             "condition": "features.animation",
             "output": [ "privateFeature" ]
         },
-        "qml-delegate-model": {
-            "label": "QML delegate model",
-            "purpose": "Provides the DelegateModel QML type.",
-            "section": "QML",
-            "output": [ "privateFeature" ]
-        },
         "qml-worker-script": {
             "label": "QML WorkerScript",
             "purpose": "Enables the use of threads in QML.",
@@ -201,10 +189,8 @@
                 "qml-debug",
                 "qml-jit",
                 "qml-sequence-object",
-                "qml-list-model",
                 "qml-xml-http-request",
-                "qml-locale",
-                "qml-delegate-model"
+                "qml-locale"
             ]
         }
     ]
