Add features for the remaining QML model types
The table and object models should be configurable, too, and Package
conceptually belongs to the delegate model.

Change-Id: Id928f14c5b378b6e7ffcbb98039192fa7c375fa7
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/src/qmlmodels/configure.json
+++ b/src/qmlmodels/configure.json
@@ -6,6 +6,12 @@
     ],
 
     "features": {
+        "qml-object-model" : {
+            "label": "QML list model",
+            "purpose": "Provides the ObjectModel and Instantiator QML types.",
+            "section": "QML",
+            "output": [ "privateFeature" ]
+        },
         "qml-list-model": {
             "label": "QML list model",
             "purpose": "Provides the ListModel QML type.",
@@ -15,6 +21,13 @@
         "qml-delegate-model": {
             "label": "QML delegate model",
             "purpose": "Provides the DelegateModel QML type.",
+            "section": "QML",
+            "condition": "features.qml-object-model",
+            "output": [ "privateFeature" ]
+        },
+        "qml-table-model": {
+            "label": "QML table model",
+            "purpose": "Provides the TableModel QML type.",
             "section": "QML",
             "output": [ "privateFeature" ]
         }
