--- a/src/quick/configure.json
+++ b/src/quick/configure.json
@@ -113,6 +113,7 @@
             "label": "TableView item",
             "purpose": "Provides the TableView item.",
             "section": "Qt Quick",
+            "condition": "features.qml-table-model",
             "output": [
                 "privateFeature"
             ]
