Add a feature for Drag&Drop support in Qt Quick
Even if we have drag&drop in QtGui we don't necessarily want it in
QtQuick. Also, since the QQuickDropArea needs QRegularExpression,
quick-draganddrop needs to depend on regularexpression.

Change-Id: I623e910178160ad3e3af3c01c96c30e88dc1b7ba
Reviewed-by: Samuel Gaist <samuel.gaist@idiap.ch>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>

--- a/src/quick/configure.json
+++ b/src/quick/configure.json
@@ -1,6 +1,7 @@
 {
     "module": "quick",
     "depends": [
+        "core-private",
         "qml-private",
         "gui-private",
         "qmlmodels-private"
@@ -179,6 +180,18 @@
             "section": "Qt Quick",
             "output": [
                 "privateFeature"
+            ]
+        },
+        "quick-draganddrop": {
+            "label": "Drag & Drop",
+            "purpose": "Drag and drop support for Qt Quick",
+            "section": "Qt Quick",
+            "condition": [
+                "features.draganddrop",
+                "features.regularexpression"
+            ],
+            "output": [
+                "publicFeature"
             ]
         }
     },
