Fix declarative build
- qmltest examples should not be built for now (there's no ported
  CMakeLists.txt file)
- when building QmlDevTools, qml_module_include_dir should only be
  included during building, because those are build directory paths.
- QmlTest was missing some private dependencies to find private
  includes

Change-Id: I22a77cd46f82bc61ab84aa7bc4c9d0e38a9d603a
Reviewed-by: Frederik Gladhorn <frederik.gladhorn@qt.io>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,9 +2,9 @@
 
 add_subdirectory(qml)
 
-if(TARGET Qt::QuickTest)
-    add_subdirectory(qmltest)
-endif()
+#if(TARGET Qt::QuickTest)
+    #add_subdirectory(qmltest)
+#endif()
 
 #if(TARGET Qt::Quick)
 #add_subdirectory(quick)
