--- a/.qmake.conf
+++ b/.qmake.conf
@@ -2,5 +2,6 @@ load(qt_build_config)
 CONFIG += warning_clean
 
 DEFINES += QT_NO_LINKED_LIST
+DEFINES += QT_NO_JAVA_STYLE_ITERATORS
 
 MODULE_VERSION = 5.14.0
