Fix build without features.itemmodel
Change-Id: Ia4304644a2a365c359eed31c55c2ca9d7d42f10c
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>

--- a/src/qml/configure.json
+++ b/src/qml/configure.json
@@ -178,6 +178,13 @@
             "section": "QML",
             "condition": "features.thread",
             "output": [ "privateFeature" ]
+        },
+        "qml-itemmodel": {
+            "label": "QML Item Model",
+            "purpose": "Provides the item model for item views in QML",
+            "section": "QML",
+            "condition": "features.itemmodel",
+            "output": [ "privateFeature" ]
         }
     },
 
