Fix label name of features.qml-object-model
Change-Id: I8a35e51f87cfa49bdec834cca65ef169dd76b750
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>

--- a/src/qmlmodels/configure.json
+++ b/src/qmlmodels/configure.json
@@ -7,7 +7,7 @@
 
     "features": {
         "qml-object-model" : {
-            "label": "QML list model",
+            "label": "QML object model",
             "purpose": "Provides the ObjectModel and Instantiator QML types.",
             "section": "QML",
             "output": [ "privateFeature" ]
