Allow the use of qmlcachegen inside src
Make the qmlcachegen target visible in src. This will allow the use of
compiling .qml files such as src/imports/testlib/*.qml ahead of time.

We might move the sources over from tools/ in the future, but for cmake
this isn't necessary -- as long as the targets are defined.

Change-Id: I0755c6cb5c78fcb144c067d2b50092e42bb6f65a
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,11 +29,17 @@ endif()
 # These need to be included here since they have dependencies on the modules
 # specified above.
 add_subdirectory(plugins)
-add_subdirectory(imports)
 
 if(QT_FEATURE_qml_devtools)
     add_subdirectory(qmldevtools)
+
+    # Build qmlcachegen now, so that we can use it in src/imports.
+    if(QT_FEATURE_commandlineparser AND QT_FEATURE_xmlstreamwriter)
+        add_subdirectory(../tools/qmlcachegen qmlcachegen)
+    endif()
 endif()
+
+add_subdirectory(imports)
 
 if(QT_FEATURE_qml_network)
 
