Update add_qml_module() call to match new requirements
Add INSTALL_QML_FILES as the default option for all qml_plugins.

Change-Id: I567aeff7b4b2b40765c83ac08ab7af3917a25981
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/src/imports/folderlistmodel/CMakeLists.txt
+++ b/src/imports/folderlistmodel/CMakeLists.txt
@@ -5,6 +5,7 @@
 #####################################################################
 
 add_qml_module(qmlfolderlistmodelplugin
+    INSTALL_QML_FILES
     TARGET_PATH "Qt/labs/folderlistmodel"
     IMPORT_VERSION "2.${CMAKE_PROJECT_VERSION_MINOR}"
     SOURCES
