--- a/src/imports/wavefrontmesh/CMakeLists.txt
+++ b/src/imports/wavefrontmesh/CMakeLists.txt
@@ -5,6 +5,7 @@
 #####################################################################
 
 add_qml_module(qmlwavefrontmeshplugin
+    INSTALL_QML_FILES
     TARGET_PATH "Qt/labs/wavefrontmesh"
     IMPORT_VERSION "1.${CMAKE_PROJECT_VERSION_MINOR}"
     SOURCES
