--- a/src/imports/shapes/CMakeLists.txt
+++ b/src/imports/shapes/CMakeLists.txt
@@ -5,6 +5,7 @@
 #####################################################################
 
 add_qml_module(qmlshapesplugin
+    INSTALL_QML_FILES
     TARGET_PATH "QtQuick/Shapes"
     IMPORT_VERSION "1.${CMAKE_PROJECT_VERSION_MINOR}"
     SOURCES
