Update qml modules
Updated qml modules to be compatible with the latest changes to
add_qml_modules.

Change-Id: I3342a1375bfa64a16fb0c54f812c56bad173f73c
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/src/imports/folderlistmodel/CMakeLists.txt
+++ b/src/imports/folderlistmodel/CMakeLists.txt
@@ -5,9 +5,10 @@
 #####################################################################
 
 add_qml_module(qmlfolderlistmodelplugin
-    INSTALL_QML_FILES
-    TARGET_PATH "Qt/labs/folderlistmodel"
-    IMPORT_VERSION "2.${CMAKE_PROJECT_VERSION_MINOR}"
+    CPP_PLUGIN
+    URI "Qt.labs.folderlistmodel"
+    VERSION "2.${CMAKE_PROJECT_VERSION_MINOR}"
+    RESOURCE_PREFIX "/qt-project.org/imports"
     SOURCES
         fileinfothread.cpp fileinfothread_p.h
         fileproperty_p.h
