--- a/src/imports/sharedimage/CMakeLists.txt
+++ b/src/imports/sharedimage/CMakeLists.txt
@@ -5,9 +5,10 @@
 #####################################################################
 
 add_qml_module(sharedimageplugin
-    INSTALL_QML_FILES
-    TARGET_PATH "Qt/labs/sharedimage"
-    IMPORT_VERSION "1.0"
+    CPP_PLUGIN
+    URI "Qt.labs.sharedimage"
+    VERSION "1.0"
+    RESOURCE_PREFIX "/qt-project.org/imports"
     SOURCES
         plugin.cpp
         qsharedimageloader.cpp qsharedimageloader_p.h
