Update qml modules
Updated qml modules to be compatible with the latest changes to
add_qml_modules.

Change-Id: I37965db931d44e02a18fb0d5948e0c4439ff0852
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/src/imports/particles/CMakeLists.txt
+++ b/src/imports/particles/CMakeLists.txt
@@ -17,6 +17,8 @@ add_qml_module(particlesplugin
         Qt::QuickParticlesPrivate
         Qt::QuickPrivate
     PUBLIC_LIBRARIES
+        Qt::Core
+        Qt::Gui
         Qt::Qml
         Qt::Quick
         Qt::QuickParticles
